<resources>
    <string name="app_name">Body Fit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>

    <string name="menu_home">Body Mass Index</string>
    <string name="daily_calorie_intake">Daily Calorie Intake</string>
    <string name="body_fat_percentage">Body Fat Percentage</string>>
    <string name="water_tracking">Water Tracking</string>

    <string name="cm_kg">kg | cm</string>
    <string name="in_lb">lbs | ft</string>

    <string name="communication">Communication</string>
    <string name="check_for_update">Check for Update</string>
    <string name="share_with_friends">Share with Friends</string>
    <string name="rate_us">Rate Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="more_apps">More Apps</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_started_text">By pressing the "GET STARTED" button, you confirm and guarntee that you have read, understood and agree to our Terms of Use and Privacy Policy listed above.</string>
    <string name="body_fit_calculator">Body Fit\nCalculator</string>
    <string name="choose_your_language">Choose your Language ?</string>
    <string name="please_select_your_language">Please Select Your Language</string>
    <string name="what_is_your_gender">What is your gender ?</string>
    <string name="please_choose_your_gender">Please Choose Your Gender</string>
    <string name="what_is_your_age">What is your Age ?</string>
    <string name="select_your_age">Select Your Age</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="bmi_table">BMI Table</string>

</resources>