<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_bmi"
    tools:ignore="UnusedNavigation">

    <fragment
        android:id="@+id/nav_bmi"
        android:name="com.techbull.bmi.ui.BMI_HOME.BmiFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_bmi" />

    <fragment
        android:id="@+id/nav_bmr"
        android:name="com.techbull.bmi.ui.gallery.GalleryFragment"
        android:label="@string/daily_calorie_intake"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_fat_percent"
        android:name="com.techbull.bmi.ui.slideshow.SlideshowFragment"
        android:label="@string/body_fat_percentage"
        tools:layout="@layout/fragment_slideshow" />
</navigation>